--- a/index.html
+++ b/index.html
@@ -64,7 +64,16 @@
 				</section>
 
 				<section>
+          <h2>My info</h2>
+				</section>
+
+				<section>
           <h2>What will we be doing Today?</h2>
+          <ul>
+            <li>using docker</li>
+            <li>using github</li>
+
+          </ul>
 				</section>
 
         <section>
@@ -83,8 +92,11 @@
 40 GOTO 10
 					</code></pre>
 				</section>
+<section>
+          <h2>But First... What is docker?</h2>
+				</section>
 
-				<section>
+        <section>
           <h2>But First... What is docker?</h2>
 				</section>
 
@@ -104,7 +116,7 @@
           <h2>Docker is not...</h2>
 						<ul>
 							<li class="fragment">a Virtual Machine</li>
-							<li class="fragment">a Automated Deployment System</li>
+							<li class="fragment">an Automated Deployment System</li>
 						</ul>
 					<aside class="notes">
 					  make sure to ask about each thing
@@ -119,7 +131,7 @@
 							<li>Docker Hub: The docker image hosting service</li>
 							<li>Image: A read only file system</li>
 							<li>Base Image: An image without a parent</li>
-							<li>container: A read/write file system above a Image</li>
+							<li>container: An instance of a Image</li>
 						</ul>
 					<aside class="notes">
 					  make sure to ask about each thing
@@ -297,21 +309,21 @@ docker ps -l
           <h2>what did we just do?</h2>
           <ul>
             <li class="fragment">
-              the name of the image
+              name of the image
               <pre class="fragment"><code data-trim contenteditable>
 yourname/handbuiltnginx:v1
               </code></pre>
 
             </li>
             <li class="fragment">
-              forward the containers port bind all of the containers bound ports to a random high port on the host
+              bind all of the containers ports to a random high port on the host
               <pre class="fragment"><code data-trim contenteditable>
 -P
               </code></pre>
 
             </li>
             <li class="fragment">
-              run the container in the background
+             daemonize the container
               <pre class="fragment"><code data-trim contenteditable>
 -d
               </code></pre>
@@ -326,7 +338,9 @@ service nginx start
           </ul>
           </section>
           <section>
-            <h2>cool I can have a image of nginx but how do I host my files?</h2>
+            <h2>cool!</h2>
+            <h2 class="fragment">I can have a image of nginx</h2>
+            <h2 class="fragment">but how do I host my files?</h2>
           </section>
         </section>
         <section>
@@ -340,7 +354,10 @@ service nginx start
 					<pre><code data-trim contenteditable>
 docker ps -l
 #get the name
-docker stop #{the name you got from the ps comand}
+docker stop $the_name_found
+					</code></pre>
+					<pre><code data-trim contenteditable>
+docker stop `docker ps -lq`
 					</code></pre>
           </section>
           <section>
@@ -359,15 +376,18 @@ docker stop #{the name you got from the ps comand}
 					<section>
 						<h2>add these files to your container</h2>
 					<pre><code data-trim contenteditable>
-docker run -i -t yourname/handbuiltnginx:v1 /bin/bash
+docker run -i -t -p 80:80 yourname/handbuiltnginx:v1 /bin/bash
 # in the container
-# wget the file TODO get the repo name
-# add a site file
+mkdir /var/www && cd /var/www
+git clone https://github.com/dfedde/docker_workshop.git
+nginx TODO fesh this out a bit more
+#look at your new site in the browser
 exit
 docker ps -l
 # get the name from of the container
 docker commit #{the_name_of_the_container} yourname/handbuiltnginx:v2
 docker run -d -P yourname/handbuiltnginx:v2 service nginx start
+#look at your new site in the browser
 docker ps -l
 					</code></pre>
           </section>
@@ -414,8 +434,8 @@ docker push -d yourname/handbuiltnginx
 						<h2>build your image with a docker file</h2>
             <h3><a href="https://docs.docker.com/reference/builder/">DockerFile info</a></h3>
 					<pre><code data-trim contenteditable>
-#create a Dockerfile
-docker build -t yourname/nginxfromfile the/location/of the docker file
+# create a Dockerfile
+docker build -t yourname/nginxfromfile the/location/of/the/docker/file
 					</code></pre>
           </section>
           <section>
@@ -446,20 +466,20 @@ docker run -d -P -v www:/var/www yourname/handbuiltnginx:v1 service nginx start
           </ul>
           </section>
           <section>
-            <h2>but this relays on every host having the same file structure</h2>
+            <h2>but this relies on every host having the same file structure</h2>
           </section>
         </section>
 
         <section>
 					<section>
-						<h2>Lab 08</h2>
-					  <h3>using volumes</h3>
+						<h2>Lab 09</h2>
+					  <h3>using unnamed volumes</h3>
 					</section>
 
 					<section>
 						<h2>use a named volume</h2>
 					<pre><code data-trim contenteditable>
-docker run -d -P -v www:/var/www yourname/handbuiltnginx:v1 service nginx start
+docker run -d -P -v .:/var/www yourname/handbuiltnginx:v1 service nginx start
 					</code></pre>
           </section>
           <section>
