Added 4 more lab titles

--- a/index.html
+++ b/index.html
@@ -70,14 +70,22 @@
 				<section>
           <h2>What will we be doing Today?</h2>
           <ul>
-            <li>using docker</li>
-            <li>using github</li>
-
+            <li class="fragment">using linux</li>
+            <li class="fragment">using docker</li>
+            <li class="fragment">using dockerhub</li>
+            <li class="fragment">using github</li>
           </ul>
 				</section>
 
         <section>
+          <h2>But most of all</h2>
+				</section>
+
+        <section>
           <h2>We will be setting up this</h2>
+				</section>
+
+        <section>
 					<p>
 						<small>Cue live demo</small>
 					</p>
@@ -85,14 +93,20 @@
 
 				<section>
           <h2>Yes... but how?</h2>
-					<pre class="fragment"><code data-trim contenteditable>
+				</section>
+
+        <section>
+          <h2>well, like this</h2>
+					<pre><code data-trim contenteditable>
 10 I'll run a lab
 20 You will pair up and try the lab on your own
 30 we'll come back and discus the lab
 40 GOTO 10
 					</code></pre>
 				</section>
-<section>
+
+
+        <section>
           <h2>But First... What is docker?</h2>
 				</section>
 
