at home changes

--- a/index.html
+++ b/index.html
@@ -70,10 +70,17 @@ if( window.location.search.match( /print-pdf/gi ) ) {
         <section>
           <h2>What will we be doing Today?</h2>
           <ul>
-            <li>using docker</li>
-            <li>using github</li>
+            <li class="fragment">using docker</li>
+            <li class="fragment">using git</li>
+            <li class="fragment">using github</li>
+            <li class="fragment">using docker hub</li>
+            <li class="fragment">using docker hub</li>
 
           </ul>
+        </section>
+        
+        <section>
+          <h2>but most of all</h2>
         </section>
 
         <section>
